--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 mc_version=1.11.2
-forge_version=13.20.0.2315
+forge_version=13.20.1.2393
 mcp_mappings=stable_nodoc_32
-mod_version=3.0.3
+mod_version=3.0.5
 ## Hard Dependencies.
 ccl_version=2.7.0.+
 ## Soft Dependencies.
-jei_version=4.5.0.+
+jei_version=4.5.0.293
 #blood_magic_version=2.1.+
 tinkers_version=2.7.+
 mantle_version=1.2.+
