--- a/src/main/resources/avaritia_at.cfg
+++ b/src/main/resources/avaritia_at.cfg
@@ -11,4 +11,7 @@ public net.minecraft.entity.item.EntityItem field_145804_b # delayBeforeCanPicku
 public net.minecraft.entity.item.EntityItem func_85054_d()V # searchForOtherItemsNearby
 public net.minecraft.entity.item.EntityItem field_70292_b # age
 public net.minecraft.entity.EntityLivingBase field_70718_bc # recentlyHit
-public net.minecraft.client.gui.inventory.GuiContainer func_146977_a(Lnet/minecraft/inventory/Slot;)V #drawSlot 
+public net.minecraft.client.gui.inventory.GuiContainer func_146977_a(Lnet/minecraft/inventory/Slot;)V # drawSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_147006_u # hoveredSlot
+public net.minecraft.client.renderer.RenderItem func_175035_a(Lnet/minecraft/client/renderer/block/model/IBakedModel;I)V # renderModel
+public net.minecraft.client.renderer.RenderItem func_175036_a(Lnet/minecraft/client/renderer/block/model/IBakedModel;Lnet/minecraft/item/ItemStack;)V # renderModel
