--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ forge_version=13.20.1.2393
 mcp_mappings=stable_nodoc_32
 mod_version=3.0.5
 ## Hard Dependencies.
-ccl_version=2.7.0.+
+ccl_version=3.0.0.+
 ## Soft Dependencies.
 jei_version=4.5.0.293
 #blood_magic_version=2.1.+
@@ -14,3 +14,5 @@ forestry_version=5.3.4.+
 minetweaker_version=3.+
 de_version=2.0.12.+
 compatlayer_version=0.2.+
+ra_version=2.2.+
+cofh_core_version=4.2.+
