--- a/src/main/resources/avaritia_at.cfg
+++ b/src/main/resources/avaritia_at.cfg
@@ -15,3 +15,7 @@ public net.minecraft.client.gui.inventory.GuiContainer func_146977_a(Lnet/minecr
 public net.minecraft.client.gui.inventory.GuiContainer field_147006_u # hoveredSlot
 public net.minecraft.client.renderer.RenderItem func_175035_a(Lnet/minecraft/client/renderer/block/model/IBakedModel;I)V # renderModel
 public net.minecraft.client.renderer.RenderItem func_175036_a(Lnet/minecraft/client/renderer/block/model/IBakedModel;Lnet/minecraft/item/ItemStack;)V # renderModel
+
+public net.minecraft.client.renderer.RenderItem field_175059_m # itemModelMesher
+public net.minecraft.client.renderer.RenderItem field_175057_n # textureManager
+public net.minecraft.client.renderer.RenderItem field_184395_f # itemColors
