--- a/build.properties
+++ b/build.properties
@@ -1,14 +1,14 @@
-mc_version=1.12.2
-forge_version=14.23.4.2705
-mappings=snapshot_20171003
-mod_version=3.3.0
+mc_version=1.14.4
+forge_version=28.1.+
+mappings_channel=snapshot
+mappings_version=20191029-1.14.3
 
 ## Hard Dependencies.
 ccl_version=3.1.9.+
 
 ## Soft Dependencies.
-jei_version=4.10.0.+
-craft_tweaker_version=4.1.9.+
+jei_version=6.0.0.+
+craft_tweaker_version=5.0.+
 
 ## Others
 blood_magic_version=2.12.+
